[tool.poetry]
name = "mint-strategy-server"
version = "0.1.0"
description = ""
authors = ["Raphael Krupinski"]
packages = [
    { include = "mint_strategy", from = "src" },
]
[tool.poetry.scripts]
mint-server = 'mint_strategy.server:main'

[tool.poetry.dependencies]
appdirs = "^1.4.4"
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
openpyxl = "^3.0.9"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"